charts/helm-chart/kubernetes-dashboard/_templates_old/networkpolicy.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

  { { if .Values.networkPolicy.enabled - } }
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: { { template "kubernetes-dashboard.fullname" . } }
  labels:
    app: { { template "kubernetes-dashboard.name" . } }
    chart: { { template "kubernetes-dashboard.chart" . } }
    release: { { .Release.Name } }
    heritage: { { .Release.Service } }
    { { - if .Values.commonLabels } }
    { { - include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 } }
    { { - end } }
  annotations:
    { { - if .Values.commonAnnotations } }
      { { - include "common.tplvalues.render" ( dict "value" .Values.commonAnnotations "context" $ ) | nindent 4 } }
      { { - end } }
spec:
  podSelector:
    matchLabels:
  { { include "kubernetes-dashboard.matchLabels" . | nindent 6 } }
  { { - if .Values.networkPolicy.ingressDenyAll } }
ingress: [ ]
  { { - else } }
ingress:
  - ports:
  { { - if .Values.protocolHttp } }
- port: http
  protocol: TCP
  { { - else } }
- port: https
  protocol: TCP
  { { - end - } }
  { { - end - } }
  { { - end - } }
